feat: dashboard data & seeder
